--- a/main.html
+++ b/main.html
@@ -10,38 +10,38 @@
     <center style="margin: 50px;"><h1>Internship Form</h1></center>
     <form class="row g-3 needs-validation" novalidate>
         <div class="col-md-4">
-          <label for="validationCustom01" class="form-label">First name</label>
-          <input type="text" class="form-control" id="validationCustom01" required>
+          <label for="first-name-input" class="form-label">First name</label>
+          <input type="text" class="form-control" id="first-name-input" required>
           <div class="invalid-feedback">
             Please provide First Name.
           </div>
         </div>
         <div class="col-md-4">
-          <label for="validationCustom02" class="form-label">Last name</label>
-          <input type="text" class="form-control" id="validationCustom02" required>
+          <label for="last-name-input" class="form-label">Last name</label>
+          <input type="text" class="form-control" id="last-name-input" required>
           <div class="invalid-feedback">
             Please provide Last Name.
           </div>
         </div>
         <div class="col-md-4">
-          <label for="validationCustomUsername" class="form-label">Email Address</label>
+          <label for="email-input" class="form-label">Email Address</label>
           <div class="input-group has-validation">
-            <input type="text" class="form-control" id="validationCustomUsername" placeholder="xyz@abc.com" aria-describedby="inputGroupPrepend" required>
+            <input type="text" class="form-control" id="email-input" placeholder="xyz@abc.com" aria-describedby="inputGroupPrepend" required>
             <div class="invalid-feedback">
               Email required!!
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <label for="validationCustom03" class="form-label">College</label>
-          <input type="text" class="form-control" id="validationCustom03" required>
+          <label for="college-input" class="form-label">College</label>
+          <input type="text" class="form-control" id="college-input" required>
           <div class="invalid-feedback">
             Please provide a valid college.
           </div>
         </div>
         <div class="col-md-3">
-          <label for="validationCustom04" class="form-label">Graduation Year</label>
-          <select class="form-select" id="validationCustom04" required>
+          <label for="grad-year-select" class="form-label">Graduation Year</label>
+          <select class="form-select" id="grad-year-select" required>
             <option selected disabled value="">Choose...</option>
             <option>2020</option>
             <option>2021</option>
@@ -53,16 +53,16 @@
           </div>
         </div>
         <div class="col-md-3">
-          <label for="validationCustom05" class="form-label">Roll no.</label>
-          <input type="text" class="form-control" id="validationCustom05" required>
+          <label for="roll-no-input" class="form-label">Roll no.</label>
+          <input type="text" class="form-control" id="roll-no-input" required>
           <div class="invalid-feedback">
             Please provide a valid Roll no.
           </div>
         </div>
         <div class="col-12">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-            <label class="form-check-label" for="invalidCheck">
+            <input class="form-check-input" type="checkbox" value="" id="conditions-checkbox" required>
+            <label class="form-check-label" for="conditions-checkbox">
               Agree to terms and conditions
             </label>
             <div class="invalid-feedback">
