--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
         <div class="col-md-4">
           <label for="email-input" class="form-label">Email Address</label>
           <div class="input-group has-validation">
-            <input type="text" class="form-control" id="email-input" placeholder="xyz@abc.com" aria-describedby="inputGroupPrepend" required>
+            <input type="email" class="form-control" id="email-input" placeholder="xyz@abc.com" aria-describedby="inputGroupPrepend" required>
             <div class="invalid-feedback">
               Email required!!
             </div>
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="col-md-3">
-          <label for="roll-no-input" class="form-label">Roll no.</label>
+          <label for="roll-no-input" class="form-label">Roll No.</label>
           <input type="text" class="form-control" id="roll-no-input" required>
           <div class="invalid-feedback">
             Please provide a valid Roll no.
